fix: adhar chart preparation

--- a/chart/adhar/templates/values-secrets.yaml
+++ b/chart/adhar/templates/values-secrets.yaml
@@ -1,14 +1,14 @@
-{{- $otomi_version := .Chart.AppVersion}}
+{{- $adhar_version := .Chart.AppVersion}}
 {{- $updatedValues := .Values }}
-{{- if not .Values.otomi.version }}
-{{- $updatedValues := merge .Values (dict "otomi" (dict "version" $otomi_version)) }}
+{{- if not .Values.adhar.version }}
+{{- $updatedValues := merge .Values (dict "adhar" (dict "version" $adhar_version)) }}
 {{- end }}
 
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-values
-  labels: {{- include "otomi.labels" . | nindent 4 }}
+  labels: {{- include "adhar.labels" . | nindent 4 }}
 type: Opaque
 data:
   values.yaml: |-
