--- a/chart/adhar/Chart.yaml
+++ b/chart/adhar/Chart.yaml
@@ -4,8 +4,8 @@ description: A Helm chart for installing Adhar platform in Kubernetes
 home: https://adhar.io/
 icon: https://adhar.io/imgs/adhar-logo-black.svg
 type: application
-version: CHART_VERSION_PLACEHOLDER
-appVersion: APP_VERSION_PLACEHOLDER
+version: v2.1.0
+appVersion: v2.1.0
 keywords:
 - adhar
 - adhar.io
