--- a/chart/adhar/templates/job.yaml
+++ b/chart/adhar/templates/job.yaml
@@ -1,11 +1,11 @@
 {{- $kms := .Values.kms | default dict }}
 {{- $imageName := .Values.imageName | default "otomi/core" }}
-{{- $version := .Values.otomi.version | default .Chart.AppVersion }}
+{{- $version := .Values.adhar.version | default .Chart.AppVersion }}
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "otomi.fullname" . }}
-  labels: {{- include "otomi.labels" . | nindent 4 }}
+  name: {{ include "adhar.fullname" . }}
+  labels: {{- include "adhar.labels" . | nindent 4 }}
 spec:
   backoffLimit: 2
   template:
@@ -13,10 +13,10 @@ spec:
       {{- with .Values.podAnnotations }}
       annotations: {{- toYaml . | nindent 8 }}
       {{- end }}
-      labels: {{- include "otomi.selectorLabels" . | nindent 8 }}
+      labels: {{- include "adhar.selectorLabels" . | nindent 8 }}
     spec:
       restartPolicy: Never
-      serviceAccountName: {{ include "otomi.fullname" . }}
+      serviceAccountName: {{ include "adhar.fullname" . }}
       securityContext:
         runAsNonRoot: true
         runAsUser: 999
@@ -54,10 +54,10 @@ spec:
           {{- if hasKey $kms "sops" }}
           envFrom:
             - secretRef:
-                name: {{ include "otomi.fullname" . }}-sops-secrets
+                name: {{ include "adhar.fullname" . }}-sops-secrets
           {{- end }}
           volumeMounts:
-            - name: otomi-values
+            - name: adhar-values
               mountPath: /home/app/stack/env
             - name: values-secret
               mountPath: /secret
@@ -65,7 +65,7 @@ spec:
         - name: values-secret
           secret:
             secretName: {{ .Release.Name }}-values
-        - name: otomi-values
+        - name: adhar-values
           emptyDir: {}
       {{- if hasKey .Values "imagePullSecretNames" }}
       imagePullSecrets:
