--- a/chart/adhar/templates/post-job.yaml
+++ b/chart/adhar/templates/post-job.yaml
@@ -1,13 +1,13 @@
 {{- $kms := .Values.kms | default dict }}
-{{- $version := .Values.otomi.version | default .Chart.AppVersion }}
+{{- $version := .Values.adhar.version | default .Chart.AppVersion }}
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "otomi.fullname" . }}-pre-delete-job
+  name: {{ include "adhar.fullname" . }}-pre-delete-job
   annotations:
     helm.sh/hook: pre-delete
     helm.sh/hook-delete-policy: hook-succeeded
-  labels: {{- include "otomi.labels" . | nindent 4 }}
+  labels: {{- include "adhar.labels" . | nindent 4 }}
 spec:
   backoffLimit: 2
   ttlSecondsAfterFinished: 100
@@ -16,10 +16,10 @@ spec:
       {{- with .Values.podAnnotations }}
       annotations: {{- toYaml . | nindent 8 }}
       {{- end }}
-      labels: {{- include "otomi.selectorLabels" . | nindent 8 }}
+      labels: {{- include "adhar.selectorLabels" . | nindent 8 }}
     spec:
       restartPolicy: Never
-      serviceAccountName: {{ include "otomi.fullname" . }}
+      serviceAccountName: {{ include "adhar.fullname" . }}
       securityContext:
         runAsNonRoot: true
         runAsUser: 999
@@ -58,10 +58,10 @@ spec:
           {{- if hasKey $kms "sops" }}
           envFrom:
             - secretRef:
-                name: {{ include "otomi.fullname" . }}-sops-secrets
+                name: {{ include "adhar.fullname" . }}-sops-secrets
           {{- end }}
           volumeMounts:
-            - name: otomi-values
+            - name: adhar-values
               mountPath: /home/app/stack/env
             - name: values-secret
               mountPath: /secret
@@ -69,5 +69,5 @@ spec:
         - name: values-secret
           secret:
             secretName: {{ .Release.Name }}-values
-        - name: otomi-values
+        - name: adhar-values
           emptyDir: {}
