--- a/chart/adhar/templates/rbac.yaml
+++ b/chart/adhar/templates/rbac.yaml
@@ -1,13 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "otomi.fullname" . }}
-  labels: {{- include "otomi.selectorLabels" . | nindent 8 }}
+  name: {{ include "adhar.fullname" . }}
+  labels: {{- include "adhar.selectorLabels" . | nindent 8 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: {{ include "otomi.fullname" . }}
+    name: {{ include "adhar.fullname" . }}
     namespace: {{ .Release.Namespace }}
