--- a/chart/adhar/templates/serviceaccount.yaml
+++ b/chart/adhar/templates/serviceaccount.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "otomi.fullname" . }}
-  labels: {{- include "otomi.labels" . | nindent 4 }}
+  name: {{ include "adhar.fullname" . }}
+  labels: {{- include "adhar.labels" . | nindent 4 }}
   {{- with .Values.serviceAccountAnnotations }}
   annotations: {{- toYaml . | nindent 4 }}
   {{- end }}
