--- a/.github/workflows/adhar-tools-build-release.yaml
+++ b/.github/workflows/adhar-tools-build-release.yaml
@@ -1,4 +1,4 @@
-name: Otomi Tools Build and Versioning
+name: Adhar Tools Build and Release
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 env:
-  NAMESPACE: otomi
+  NAMESPACE: adhario
   REPO: tools
 
 jobs:
@@ -69,14 +69,14 @@ jobs:
         if: ${{ env.NEW_VERSION != null }}
         run: |
           pip3 install docker-squash
-          docker-squash otomi/tools -t ${{ env.NAMESPACE }}/${{ env.REPO }}:${{ env.NEW_VERSION }}
+          docker-squash adhario/tools -t ${{ env.NAMESPACE }}/${{ env.REPO }}:${{ env.NEW_VERSION }}
 
       - name: Login to GitHub Container Registry
         if: ${{ env.NEW_VERSION != null }}
         uses: docker/login-action@v2.1.0
         with:
-          username: 'otomi'
-          password: '${{ secrets.DOCKERHUB_OTOMI_TOKEN }}'
+          username: 'adhario'
+          password: '${{ secrets.DOCKERHUB_ADHAR_TOKEN }}'
 
       - name: Push Docker image
         if: ${{ env.NEW_VERSION != null }}
