--- a/.github/workflows/cloudtty-build-push.yml
+++ b/.github/workflows/cloudtty-build-push.yml
@@ -1,4 +1,4 @@
-name: CloudTTY Build and Versioning
+name: CloudTTY Build and Release
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 env:
-  NAMESPACE: otomi
+  NAMESPACE: adhario
   REPO: tty
 
 jobs:
@@ -68,14 +68,14 @@ jobs:
         if: ${{ env.NEW_VERSION != null }}
         run: |
           pip3 install docker-squash
-          docker-squash otomi/tty -t ${{ env.NAMESPACE }}/${{ env.REPO }}:${{ env.NEW_VERSION }}
+          docker-squash adhario/tty -t ${{ env.NAMESPACE }}/${{ env.REPO }}:${{ env.NEW_VERSION }}
 
       - name: Login to GitHub Container Registry
         if: ${{ env.NEW_VERSION != null }}
         uses: docker/login-action@v2.1.0
         with:
-          username: 'otomi'
-          password: '${{ secrets.DOCKERHUB_OTOMI_TOKEN }}'
+          username: 'adhario'
+          password: '${{ secrets.DOCKERHUB_ADHAR_TOKEN }}'
 
       - name: Push Docker image
         if: ${{ env.NEW_VERSION != null }}
