--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.6
 # The above is needed for the "--checksum" argument to work in the ADD instruction
-FROM ubuntu:20.04
+FROM ubuntu:latest
 
 ARG DEBIAN_FRONTEND=noninteractive
 
