fix: tools latest tag

--- a/.github/workflows/adhar-tools-build-release.yaml
+++ b/.github/workflows/adhar-tools-build-release.yaml
@@ -81,3 +81,4 @@ jobs:
         if: ${{ env.NEW_VERSION != null }}
         run: |
           docker push ${{ env.NAMESPACE }}/${{ env.REPO }}:${{ env.NEW_VERSION }}
+          docker push ${{ env.NAMESPACE }}/${{ env.REPO }}:latest
