--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1.6
-# The above is needed for the "--checksum" argument to work in the ADD instruction
+# The above is needed for the "--checksum" argument to work in the ADD instruction used below.
 FROM ubuntu:latest
 
 ARG DEBIAN_FRONTEND=noninteractive
