--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       #   uses: whoan/docker-build-with-cache-action@v5
       #   with:
       #     username: ${{ env.GIT_USER }}
-      #     password: '${{ secrets.NPM_TOKEN }}'
+      #     password: '${{ secrets.GIT_PASSWORD }}'
       #     registry: ${{ env.CACHE_REGISTRY }}
       #     image_name: ${{ env.CACHE_REPO }}
       #     image_tag: ${{ env.TAG }}
@@ -68,6 +68,7 @@ jobs:
       - name: Show me the logic
         run: |
           echo github.ref == ${{ github.ref }}
+
   release:
     needs: push-to-docker
     if: always() && (startsWith(github.ref, 'refs/heads/releases/') || startsWith(github.ref, 'refs/heads/main')) && startsWith(github.event.head_commit.message, 'chore(release)') && !github.event.act
@@ -110,6 +111,7 @@ jobs:
           name: Release ${{ steps.git_tag.outputs.tag }}
           bodyFile: 'NEW_CHANGELOG.md'
           generateReleaseNotes: true
+
   chart-release:
     needs: release
     if: always() && contains(needs.release.result, 'success') && !github.event.act
