--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ env:
   REPO: adhario/adhar
   GIT_USER: ${{ github.repository_owner }}
 
+permissions: write-all
+
 jobs:
   build-test-cache:
     if: (!contains(github.event.head_commit.message, 'ci skip') && !startsWith(github.ref, 'refs/tags/') && !github.event.act)
