--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adhar",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "type": "commonjs",
   "author": "Anitech Consulting Services Pvt Ltd",
   "description": "Adhar platform is an opinionated stack of Kubernetes apps and configurations to run a production-ready platform on Kubernetes.",
@@ -130,7 +130,7 @@
     "jest-ts-auto-mock": "2.1.0",
     "json-schema-to-typescript": "10.1.5",
     "json2ts": "0.0.7",
-    "jsonpath": "1.1.1",
+    "jsonpath": "^1.1.1",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
